libmeegotouch (0.20.84~1) unstable; urgency=low

  * unreleased

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 09 Feb 2011 15:24:26 +0200

libmeegotouch (0.20.83-1) unstable; urgency=low

  * New version
  * Fixes: NB#221148 - Notification group's timestamp information doesn't always get updated
  * Fixes: NB#216504 - CSS property "content-opacity" for MButton does not affect icon
  * Fixes: properly initialize cursor width on masked text entries
  * Fixes: NB#224577
  * Fixes: NB#223769 crash in MSceneManagerPrivate::init

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 09 Feb 2011 15:22:03 +0200

libmeegotouch (0.20.82-1) unstable; urgency=low

  * New version
  * Fixes: NB#225602 - Short event banner pressed down state visuals look wrong
  * Fixes: NB#207899 - MTextEdit allows preedit to entries that have already reached maximum size
  * Fixes: NB#225573 - Strangely looking text entry in Search app
  * Fixes: NB#221617 - Each MAction adds approximately 5ms to every MApplicationPage appearance (Using gallery css)
  * Fixes: NB#220043 - MButtonView::sizeHint(Qt::PreferredSize) provides incorrect size for rich-text
  * Fixes: NB#212951 - Short event banner visuals do not match the layout guide
  * Fixes: LayoutAboutToBeChanged/LayoutChanged signals is used wrong in the PhoneBookModel in widgetsgallery.
  * Fixes: NB#218220 - COREWEB: /usr/bin/call-ui 'QDir::QDir MRemoteThemeDaemon::currentTheme MTheme::currentTheme Dialer::DialerWidget::DialerWidget'
  * Fixes: NB#221365 - Can not set list index style to inverted
  * Fixes: NB#209318 - MLabelView calls updateGeometry() when the text changes.
  * Fixes: NB#217876 - MApplicationMenuView::~MApplicationMenuView() does not remove its widgets from the controller.
  * Fixes: NB#223699 - [TASK] MAction->setSelectedIcon needed
  * Fixes: NB#222528 - Status menu displayed in left part of the screen in landscape mode
  * Fixes: NB#225456 - crash when removing action from application menu